--- a/index.html
+++ b/index.html
@@ -551,7 +551,8 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
 
 })();</script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>From Script to System: Workshop</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&amp;family=JetBrains+Mono:wght@400;700&amp;display=swap" rel="stylesheet">
     <style>
@@ -570,17 +571,27 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
         }
 
-        /* Prevent horizontal overflow */
-        html, body {
-            max-width: 100%;
+        /* Prevent horizontal overflow - Chrome specific */
+        html {
+            max-width: 100vw;
             overflow-x: hidden;
+            -webkit-overflow-scrolling: touch;
+        }
+
+        body {
+            max-width: 100vw;
+            overflow-x: hidden;
+            position: relative;
         }
 
         /* Ensure all containers respect viewport width */
         div, section, article {
             max-width: 100%;
+            min-width: 0; /* Chrome fix for flex/grid children */
         }
 
         body {
@@ -590,7 +601,9 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
             overflow: hidden;
             height: 100vh;
             width: 100vw;
-            max-width: 100%;
+            max-width: 100vw;
+            min-width: 0;
+            position: relative;
         }
 
         /* Slide Container */
@@ -661,12 +674,18 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
             width: 100%;
             height: calc(100vh - 180px); /* Full height minus padding/controls */
             max-width: 1600px;
+            min-width: 0;
             align-items: stretch;
             overflow: hidden;
         }
 
         .left-stack {
             grid-area: left;
+            grid-row: 1;
+            grid-column: 1;
+            -ms-grid-row: 1;
+            -ms-grid-column: 1;
+            order: 1; /* Ensure left-stack appears first (left) */
             display: flex;
             flex-direction: column;
             gap: 1.5rem;
@@ -690,6 +709,11 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
 
         .right-stack {
             grid-area: right;
+            grid-row: 1;
+            grid-column: 2;
+            -ms-grid-row: 1;
+            -ms-grid-column: 3;
+            order: 2; /* Ensure right-stack appears second (right) */
             display: flex;
             flex-direction: column;
             height: 100%;
@@ -711,9 +735,20 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
             max-height: 100%; /* Prevent overflow from parent */
         }
 
-        .right-stack .grid-item {
-            flex-grow: 1; /* Fill available space */
-            max-height: 100%; /* Constrain to parent height */
+        /* Desktop: Right stack fills remaining space */
+        @media (min-width: 1025px) {
+            .right-stack .grid-item {
+                flex-grow: 1; /* Fill available space */
+                max-height: 100%; /* Constrain to parent height */
+            }
+        }
+
+        /* Mobile/Tablet: Right stack items should be balanced */
+        @media (max-width: 1024px) {
+            .right-stack .grid-item {
+                flex: 0 0 auto; /* Don't grow, use content size */
+                max-height: 60vh; /* Limit height for scrolling */
+            }
         }
 
         .grid-title {
@@ -967,7 +1002,10 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
         @keyframes blink { 50% { opacity: 0; } }
 
         /* Responsive Design - Tablets and Medium Screens */
-        @media screen and (max-width: 1400px) {
+        @media only screen and (max-width: 1024px) {
+            * {
+                max-width: 100vw;
+            }
             h1 { font-size: 3rem; }
             h2 { font-size: 1.8rem; }
             h3 { font-size: 1.3rem; }
@@ -989,10 +1027,30 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
                 max-width: 100%;
             }
 
+            /* Maintain proper order in single column */
+            .left-stack {
+                grid-row: 1;
+                grid-column: 1;
+                order: 1;
+            }
+
+            .right-stack {
+                grid-row: 2;
+                grid-column: 1;
+                order: 2;
+            }
+
             .left-stack, .right-stack {
                 height: auto;
                 max-height: none;
                 width: 100%;
+            }
+
+            /* Balance both stacks in single-column layout */
+            .left-stack .grid-item,
+            .right-stack .grid-item {
+                flex: 0 0 auto !important; /* Override desktop flex-grow */
+                max-height: 55vh !important; /* Equal max height for both */
             }
 
             .grid-item {
@@ -1027,7 +1085,10 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
         }
 
         /* Responsive Design - Mobile */
-        @media screen and (max-width: 768px) {
+        @media only screen and (max-width: 768px) {
+            * {
+                max-width: 100vw;
+            }
             h1 { font-size: 2.2rem; letter-spacing: -1px; }
             h2 { font-size: 1.4rem; }
             h3 { font-size: 1.1rem; letter-spacing: 1px; }
@@ -1044,13 +1105,26 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
                 max-width: 100%;
             }
 
+            /* Maintain proper order */
+            .left-stack {
+                grid-row: 1;
+                order: 1;
+            }
+
+            .right-stack {
+                grid-row: 2;
+                order: 2;
+            }
+
             .grid-item {
                 padding: 1rem;
                 max-height: 50vh; /* Limit height on mobile */
             }
 
-            .left-stack .grid-item {
-                max-height: 40vh;
+            .left-stack .grid-item,
+            .right-stack .grid-item {
+                flex: 0 0 auto !important;
+                max-height: 45vh !important; /* Equal height for both */
             }
 
             .code-block {
@@ -1103,7 +1177,10 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
         }
 
         /* Responsive Design - Small Mobile */
-        @media screen and (max-width: 480px) {
+        @media only screen and (max-width: 480px) {
+            * {
+                max-width: 100vw;
+            }
             h1 { font-size: 1.8rem; }
             h2 { font-size: 1.2rem; margin-bottom: 1rem; }
             h3 { font-size: 1rem; }
@@ -1113,12 +1190,21 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
                 padding: 0.8rem 1rem;
             }
 
-            .grid-item {
-                max-height: 45vh;
+            /* Maintain proper order */
+            .left-stack {
+                grid-row: 1;
+                order: 1;
             }
 
-            .left-stack .grid-item {
-                max-height: 35vh;
+            .right-stack {
+                grid-row: 2;
+                order: 2;
+            }
+
+            .left-stack .grid-item,
+            .right-stack .grid-item {
+                flex: 0 0 auto !important;
+                max-height: 40vh !important; /* Equal height for both */
             }
 
             .code-block {
@@ -1173,6 +1259,62 @@ if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
             .controls {
                 bottom: 0.3rem;
                 right: 0.3rem;
+            }
+        }
+
+        /* Chrome-specific fixes for responsive behavior */
+        @supports (-webkit-appearance: none) {
+            .split-grid {
+                width: 100%;
+                max-width: 100vw;
+                display: grid; /* Ensure grid is used, not flexbox */
+            }
+
+            .slide {
+                width: 100%;
+                max-width: 100vw;
+            }
+
+            .grid-item {
+                width: 100%;
+                max-width: 100%;
+            }
+
+            /* Desktop layout - explicit positioning */
+            @media (min-width: 1025px) {
+                .left-stack {
+                    grid-column: 1;
+                    grid-row: 1;
+                }
+
+                .right-stack {
+                    grid-column: 2;
+                    grid-row: 1;
+                }
+            }
+
+            /* Single column layout - maintain order */
+            @media (max-width: 1024px) {
+                .left-stack {
+                    grid-column: 1;
+                    grid-row: 1;
+                }
+
+                .right-stack {
+                    grid-column: 1;
+                    grid-row: 2;
+                }
+            }
+        }
+
+        /* Force responsive behavior in Chrome */
+        @media screen and (-webkit-min-device-pixel-ratio: 0) {
+            body {
+                -webkit-text-size-adjust: 100%;
+            }
+
+            .split-grid {
+                display: grid !important; /* Force grid layout in Chrome */
             }
         }
 
