--- a/index.html
+++ b/index.html
@@ -1585,10 +1585,10 @@ Here is how my csv looks like partially:
 .
 "Flow N",1000,200,....
 
-Before coding, consider the following edge cases and handle them in your code:
-1. How do we handle missing files?
-2. How do we handle non-numeric rows?
-3. How do we safely convert types?
+Before coding, Consider the following in your thought process:
+1. Check for the file if it is missing or not.
+2. Check for non-numeric rows and handle them gracefully. Displaying a warning message would be beneficial.
+3. Convert types safely. make sure to handle exceptions.
 
 Return only the python code without any explanation or comments.</div>
                     </div>
@@ -1799,10 +1799,10 @@ Here is how my csv looks like partially:
 .
 "Flow N",1000,200,....
 
-Before coding, consider the following edge cases and handle them in your code:
-1. How do we handle missing files?
-2. How do we handle non-numeric rows?
-3. How do we safely convert types?
+Before coding, Consider the following in your thought process:
+1. Check for the file if it is missing or not.
+2. Check for non-numeric rows and handle them gracefully. Displaying a warning message would be beneficial.
+3. Convert types safely. make sure to handle exceptions.
 
 Act as a Senior Engineer.
 Constraints:
@@ -2021,10 +2021,10 @@ Here is how my csv looks like partially:
 .
 "Flow N",1000,200,....
 
-Before coding, consider the following edge cases and handle them in your code:
-1. How do we handle missing files?
-2. How do we handle non-numeric rows?
-3. How do we safely convert types?
+Before coding, Consider the following in your thought process:
+1. Check for the file if it is missing or not.
+2. Check for non-numeric rows and handle them gracefully. Displaying a warning message would be beneficial.
+3. Convert types safely. make sure to handle exceptions.
 
 Act as a Senior Engineer.
 Constraints:
